<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/group_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@null"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/name"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@id/group_image"
            app:layout_constraintStart_toEndOf="@id/group_image" />

        <TextView
            android:id="@+id/group_members_count"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/_320"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/group_name"
            app:layout_constraintStart_toEndOf="@id/group_image" />

        <TextView
            android:id="@+id/members_word"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/members_word"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/group_members_count"
            app:layout_constraintStart_toEndOf="@id/group_members_count"
            app:layout_constraintBottom_toBottomOf="@id/group_members_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>