<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/owner_news_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@null"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/owner_news_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/name"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/owner_news_image"
            app:layout_constraintStart_toEndOf="@id/owner_news_image" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/owner_news_name"
            app:layout_constraintBottom_toBottomOf="@id/owner_news_image"
            app:layout_constraintStart_toEndOf="@id/owner_news_image" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/text"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/owner_news_image"
            app:layout_constraintTop_toBottomOf="@id/owner_news_image" />

        <ImageView
            android:id="@+id/image_attachment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@id/image_views"
            app:layout_constraintEnd_toEndOf="@id/text_news"
            app:layout_constraintStart_toStartOf="@id/text_news"
            app:layout_constraintTop_toBottomOf="@id/text_news"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/image_views"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@id/image_attachment"
            app:layout_constraintEnd_toStartOf="@+id/text_views"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/views" />

        <TextView
            android:id="@+id/text_views"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="100"
            app:layout_constraintEnd_toStartOf="@+id/image_comments"
            app:layout_constraintTop_toTopOf="@id/image_views"
            app:layout_constraintBottom_toBottomOf="@id/image_views"
            app:layout_constraintStart_toEndOf="@id/image_views" />

        <ImageView
            android:id="@+id/image_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/image_views"
            app:layout_constraintBottom_toBottomOf="@id/image_views"
            app:layout_constraintEnd_toStartOf="@+id/text_comments"
            app:layout_constraintStart_toEndOf="@id/text_views"
            app:srcCompat="@drawable/comments" />

        <TextView
            android:id="@+id/text_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="200"
            app:layout_constraintStart_toEndOf="@id/image_comments"
            app:layout_constraintTop_toTopOf="@id/image_views"
            app:layout_constraintBottom_toBottomOf="@id/image_views"
            app:layout_constraintEnd_toStartOf="@+id/image_repost" />

        <ImageView
            android:id="@+id/image_repost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/image_views"
            app:layout_constraintBottom_toBottomOf="@id/image_views"
            app:layout_constraintStart_toEndOf="@id/text_comments"
            app:layout_constraintEnd_toStartOf="@+id/text_repost"
            app:srcCompat="@drawable/repost" />

        <TextView
            android:id="@+id/text_repost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="300"
            app:layout_constraintStart_toEndOf="@id/image_repost"
            app:layout_constraintEnd_toStartOf="@id/image_like"
            app:layout_constraintTop_toTopOf="@id/image_views"
            app:layout_constraintBottom_toBottomOf="@id/image_views" />

        <ImageView
            android:id="@+id/image_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/text_like"
            app:layout_constraintStart_toEndOf="@+id/text_repost"
            app:layout_constraintTop_toTopOf="@id/image_views"
            app:layout_constraintBottom_toBottomOf="@id/image_views"
            app:srcCompat="@drawable/like" />

        <TextView
            android:id="@+id/text_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/image_views"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_like"
            app:layout_constraintTop_toTopOf="@id/image_views"
            tools:text="400" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>